--- a/ansible/roles/script_setup/templates/init.sh.j2
+++ b/ansible/roles/script_setup/templates/init.sh.j2
@@ -38,7 +38,8 @@ fi
 mv /usr/share/dns/root.ds /usr/share/dns/root.ds.disabled
 
 ### disable upstream nameserver (now that we don't need it anymore)
-sed -i 's/^nameserver/#nameserver/' /etc/resolv.conf
+### ^^^^^ I'm commenting out the below line because I think we *do* need upstream DNS to do all of the pkg updates in the next script
+#sed -i 's/^nameserver/#nameserver/' /etc/resolv.conf
 
 ### only bind to our bridge interface for dnsmasq & dhcp
 sed -i 's/^#interface.*/interface=eth1/' /etc/dnsmasq.conf
